Fix button visibility state management
- The "Copy template" button no longer appears on the page if the user
  has no templates
- Fixed button ordering when on the template page without any templates
  selected
- Fix issue where selecting a template would not change the action
  buttons appropriately and still displayed initial page load buttons
- The disclosure menu now properly inits and can be expanded when vising
  the templates page and the user has templates
- Added the new badge and accompany CSS / aria-described attribute,
  associating the badge with the button being marked as "new"
- Added a `hasTemplates()` property to `templateFolderForm` to assist
  with state management

--- a/app/assets/stylesheets/tailwind/components/empty-list.css
+++ b/app/assets/stylesheets/tailwind/components/empty-list.css
@@ -12,6 +12,10 @@
       background-size: contain;
     }
   }
-
   /*! purgecss end ignore */
 }
+
+  span.button-badge {
+    @apply gap-2 items-center px-4 py-2 right-0 rounded-full text-xs font-medium bg-blue-100;
+    margin-left: -13px;
+  }
